# galternatives

./: .gitignore  LICENSE  README.md  TODO  galternatives.desktop  galternatives.desktop.in  galternatives.glade  galternatives.gladep  galternatives.h  pyproject.toml  setup.py
debian/: .gitignore  TODO  changelog  clean  control  copyright  galternatives.1  galternatives.install  galternatives.menu  galternatives.xpm  lintian-overrides  manpages  rules
descriptions/: x-terminal-emulator.control.in  x-terminal-emulator.desktop
galternatives/: __init__.py  __main__.py  alternative.py  app.py  appdata.py  common.py  config.py  description.py  gadebug.py  galternatives  gui.py  info.py  log.py  main.py  utils.py
resources/: .gitignore  Makefile  galternatives  galternatives.desktop.in  galternatives.gresource.xml  org.debian.experimental.galternatives.policy.in  org.debian.galternatives.metainfo.xml.in  org.debiancn.galternatives.policy.in
resources/descriptions/: convert.desktop.in  cpp.desktop.in  desktop-background.desktop.in  desktop-theme.desktop.in  editor.desktop.in  gnome-www-browser.desktop.in  google-chrome.desktop.in  jar.desktop.in  java.desktop.in  unrar.desktop.in  wine.desktop.in  x-cursor-theme.desktop.in  x-terminal-emulator.desktop.in  x-www-browser.desktop.in
tests/: alternative.py
translations/: POTFILES.in  clean-translations.sh  cs.po  de.po  es.po  extract-translations.sh  fr.po  galternatives.pot  install-translations.sh  merge-translations.sh  pt_BR.po  sv.po  update-po.sh  update-translations.sh  zh_CN.po  zh_TW.po
(+20 files in other folders)
